Mejorar branding: colores rojo/blanco/negro y agregar footer con Instagram y WhatsApp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark ">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="#">
           <span class="fw-semibold">Veo Veo</span>
@@ -34,9 +34,10 @@
     </header>
     <main class="container my-5 px-3 px-md-5">
     <!-- 1) INTRODUCCIÓN (mínimo 2 párrafos) -->
-    <section id="intro" class="mb-5 py-5  text-end text-md-center text-lg-start">
+    <section id="intro" class="mb-5 py-5 text-end text-md-center text-lg-start">
         <h2 class="mb-3">Introducción a VeoVeo</h2>
-        <p >Lorem ipsum, dolor sit amet consectetur adipisicing elit. In error tenetur repellendus odio aut vitae, eum earum corrupti illo, saepe maxime at porro mollitia placeat repellat recusandae nisi hic nostrum.</p>
+        <p>Bienvenido a VeoVeo, tu tienda de moda online. Aquí encontrarás los mejores vestidos y prendas con una amplia variedad de talles. Nuestro objetivo es brindarte la mejor experiencia de compra con productos de calidad y atención personalizada.</p>
+        <p>Selecciona tus productos favoritos, elige tu talle y completa tu compra de forma segura y rápida. ¡Gracias por elegirnos!</p>
     </section>
     <section class="container border border-light my-5 bg-dark bg-gradient rounded-5  py-5 px-3 px-md-5" id="productos">
             <h2 class="text-light text-center py-2 text-uppercase">Nuestros Mejores Vestidos</h2>
@@ -297,6 +298,43 @@
     </div>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="carrito.js"></script>
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h4>VeoVeo</h4>
+                <p>Tu tienda de moda online con los mejores productos y talles disponibles.</p>
+            </div>
+            
+            <div class="footer-section footer-contact">
+                <h4>Contacto</h4>
+                <a href="https://wa.me/5491173639237?text=Hola%20VeoVeo" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-whatsapp"></i> WhatsApp
+                </a>
+                <a href="https://www.instagram.com/veoveodes?igsh=YjAzamJzcTdtODAy" target="_blank" rel="noopener noreferrer">
+                    <i class="fab fa-instagram"></i> Instagram
+                </a>
+            </div>
+
+            <div class="footer-section">
+                <h4>Síguenos</h4>
+                <div class="social-links">
+                    <a href="https://wa.me/5491173639237?text=Hola%20VeoVeo" target="_blank" rel="noopener noreferrer" title="WhatsApp">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="https://www.instagram.com/veoveodes?igsh=YjAzamJzcTdtODAy" target="_blank" rel="noopener noreferrer" title="Instagram">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2025 VeoVeo - Tienda de Moda Online. Todos los derechos reservados.</p>
+            <p>Teléfono: <strong>+54 9 11 7363-9237</strong> (WhatsApp)</p>
+        </div>
+    </footer>
 
     <script>
         // Endpoint de Formspree para enviar pedidos
