Agregar nuevo vestido

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <main class="container my-5 px-3 px-md-5">
     <!-- 1) INTRODUCCIÓN (mínimo 2 párrafos) -->
-    <section id="intro" class="mb-5 py-5 text-end text-md-center text-lg-start">
+    <section id="intro" class="mb-5 py-5 text-md-center text-lg-start">
         <h2 class="mb-3">Introducción a VeoVeo</h2>
         <p>Bienvenido a VeoVeo, tu tienda de moda online. Aquí encontrarás los mejores vestidos y prendas con una amplia variedad de talles. Nuestro objetivo es brindarte la mejor experiencia de compra con productos de calidad y atención personalizada.</p>
         <p>Selecciona tus productos favoritos, elige tu talle y completa tu compra de forma segura y rápida. ¡Gracias por elegirnos!</p>
@@ -193,6 +193,37 @@
                                     </select>
                                 </div>
                                 <button class="btn btn-lg mt-2 btn-primary comprar-btn" data-id="5" data-nombre="Vestido 5" data-precio="70">Comprar</button>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-3">
+                    <div class="guitarraVenta d-flex flex-column">
+                        <h3 class="fw-bold">Vestido 6</h3>
+                        <img class="img-fluid" src="" alt="Vestido 6">
+                        <p class="text-light lh-sm">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus cumque nesciunt facere libero earum quo aut reprehenderit consequuntur repellat, laborum soluta id tempora, nihil quis rem nobis asperiores consectetur saepe?</p>
+                            <h4 class="mt-auto fw-bold text-light">Precio: $<span class="precio">70</span></h4>
+                                <div class="mt-2">
+                                    <label class="form-label text-light mb-1">Talle</label>
+                                    <select class="form-select talle-select" aria-label="Talle">
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                                        <option value="11">11</option>
+                                        <option value="12">12</option>
+                                        <option value="13">13</option>
+                                        <option value="14">14</option>
+                                        <option value="15">15</option>
+                                        <option value="16">16</option>
+                                    </select>
+                                </div>
+                                <button class="btn btn-lg mt-2 btn-primary comprar-btn" data-id="6" data-nombre="Vestido 6" data-precio="70">Comprar</button>
                     </div>
                 </div>
                </div>
